[project]
authors = [{ name = "abersheeran", email = "me@abersheeran.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = []
description = "Powerful and exquisite WSGI/ASGI framework/toolkit."
license = { text = "Apache-2.0" }
name = "baize"
readme = "README.md"
requires-python = ">=3.8"
version = "0.20.8"

[project.urls]
Homepage = "https://github.com/abersheeran/baize"
Repository = "https://github.com/abersheeran/baize"
Documentation = "https://baize.aber.sh/"

[tool.coverage.run]
omit = ["*/.venv/*", "*/tests/*"]
plugins = ["coverage_conditional_plugin"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if False:",
    "assert False",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "@typing.overload",
    "@overload",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = true

[tool.coverage.coverage_conditional_plugin.rules]
py-no-win32 = "sys_platform != 'win32'"
py-win32 = "sys_platform == 'win32'"

[tool.mypy]
ignore_missing_imports = true

[tool.pdm]
includes = ["baize"]
build = "speedup.py"

[tool.pdm.scripts]
lint-ruff = "ruff {args}"
lint-mypy = "mypy {args}"
lint = { composite = [
    "lint-ruff baize tests",
    "lint-mypy baize tests",
] }
lint-fix = "ruff --fix baize tests"
format = "ruff format baize tests --target-version py37"
test = "pytest tests {args}"
build-docs = "sphinx-build -M html docs/source docs/build"

[tool.pdm.dev-dependencies]
build = [
    "mypy<2.0,>=1.0",
    "mypy-extensions>=1.0",
]
dev = [
    "mypy<2.0,>=1.0",
    "ruff>=0.1.3",
]
doc = [
    "Sphinx>=4.2.0",
    "recommonmark>=0.7.1",
    "sphinx-autodoc-typehints>=1.19.1",
]
test = [
    "httpx<1.0.0,>=0.19.0",
    "pytest<8.0.0,>=7.2.1",
    "starlette>=0.14.2",
    "setuptools>=59.6",                   # to fix the fuck `No module named 'pkg_resources'`
    "pytest-cov>=4.0.0",
    "coverage>=6.3",
    "pytest-asyncio>=0.20.3",
    "coverage-conditional-plugin>=0.8.0",
]

[tool.ruff.lint]
ignore = ["F821"]

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]
