[project]
authors = [{ name = "abersheeran", email = "me@abersheeran.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = []
description = "Powerful and exquisite WSGI/ASGI framework/toolkit."
license = { text = "Apache-2.0" }
name = "baize"
readme = "README.md"
requires-python = ">=3.9"
version = "0.22.2"

[project.urls]
Homepage = "https://github.com/abersheeran/baize"
Repository = "https://github.com/abersheeran/baize"
Documentation = "https://baize.aber.sh/"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "mypy-extensions>=1.1.0",
    "ruff>=0.12.0",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "starlette>=0.47.1",
    "setuptools>=80.9.0",
    "pytest-cov>=6.2.1",
    "coverage>=7.9.1",
    "pytest-asyncio>=1.0.0",
    "coverage-conditional-plugin>=0.9.0",
]

[tool.coverage.run]
omit = ["*/.venv/*", "*/tests/*"]
plugins = ["coverage_conditional_plugin"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if False:",
    "assert False",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "@typing.overload",
    "@overload",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = true

[tool.coverage.coverage_conditional_plugin.rules]
py-no-win32 = "sys_platform != 'win32'"
py-win32 = "sys_platform == 'win32'"

[tool.mypy]
ignore_missing_imports = true

[tool.pdm]

[tool.pdm.build]
run-setuptools = true

[tool.pdm.scripts]
lint-ruff = "ruff check {args}"
lint-mypy = "mypy {args}"
lint = { composite = ["lint-ruff baize tests", "lint-mypy baize"] }
lint-fix = "ruff check --fix baize tests"
format = "ruff format baize tests --target-version py37"
test = "pytest tests {args}"
build-docs = "sphinx-build -M html docs/source docs/build"

[tool.ruff.lint]
ignore = ["F821"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
